--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ input[type=password], select{
 
 <input type="password" id="myText2"> <br> <br>
 
-<button onclick="myFunction()">Submit</button>
-
+<button onclick="myFunction()">Login</button>
+		
 <script>
 function myFunction() {
   var x = document.getElementById("myText").value;
