--- a/page1.html
+++ b/page1.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title> POS System </title>
 <style>
 
 #header h1{
   margin: 0px;
+}
+
+#outer
+{
+    width:100%;
+    text-align: center;
+}
+.inner
+{
+    display: inline-block;
 }
 
 body{
@@ -62,16 +73,100 @@ li c {
 
 p1 {
   color: #33ccff;
-  font-family: arial;
+  font-family: tahoma;
   font-size: 30px;
   vertical-align: super;
-  font-style: bold;
+  font-weight: bold;
   padding-left: 350px;
 }
 
-  
+.button {
+  background-color: white;
+  width: 150px;
+  height: 100px;
+  align: center;
+  border: solid;
+  border-color: red;
+  border-radius: 15px;
+  color: black;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 20px;
+  font-weight: bold;
+  font-family: tahoma;
+  display: inline-block;
+  padding: auto;
+  vertical-align: middle;
+}
+
+.button1 {
+  background-color: white;
+  width: 150px;
+  height: 100px;
+  align: center;
+  border: solid;
+  border-color: #33CCFF;
+  border-radius: 15px;
+  color: black;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 20px;
+  font-weight: bold;
+  font-family: tahoma;
+  display: inline-table;
+  padding: auto;
+  vertical-align: middle;
 
 }
+
+.split {
+  height: 89%;
+  position: fixed;
+  z-index: 1;
+  top: 11%;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+
+.right {
+  right: 0;
+  background-color: white;
+  width: 35%;
+  border-left: solid;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
+
+.box {
+  width: 100%;
+  height: 100px;
+  align: left;
+  border: solid;
+  border-color: gray;
+  color: white;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 20px;
+  font-weight: bold;
+  font-family: tahoma;
+  display: inline-table;
+  padding: auto;
+  vertical-align: middle;
+
 
 </style>
 </head>
@@ -83,11 +178,30 @@ p1 {
 <li><a href=# onclick="forhereswitch()"><p3 id="switch"></p3></a></li>
 <li><a href=# onclick="myFunction()">Loyalty<br> -</a></li>
 <li><br><p2 id="forhere"></p2><br><p1>Order # 696969</p1></li>
-
 </ul>
 
+<br>
+<button class="button">CINNAMON <br> BUNS</button>
+<button class="button">PASTRIES</button>
+<button class="button1">NO TAX PASTRIES</button>
+<button class="button">SAVOURY</button>
+<button class="button">ICING</button>
 
-<p id="demo"></p>
+<br><br><br><br><br>
+
+<div class="split left">
+  <div class="centered">
+    <img src="img_avatar2.png" alt="Avatar woman">
+    <h2>Jane Flex</h2>
+    <p>Some text.</p>
+  </div>
+</div>
+
+<div class="split right">
+  <div class="box"> sup </div>
+  
+  </div>
+</div>
 
 <script>
 function myFunction() {
