--- a/index.html
+++ b/index.html
@@ -1,64 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Log In </title>
+<title> Welcome! </title>
+<meta charset="UTF-8">
 <style>
-p {
-    display: inline;
-}
-h3 {
-    display: inline;
-	font-size: 3em;
-}
-input[type=text], select{
-	font-size:30px;
-	width:125px;
-	height: 60px;
-	padding: 12px 20px;
-	margin: 8px 0;
-	display: inline-block;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	box-sizing: border-box;
+
+
+a {
+  padding: 20px 32px;
+  display: inline-block;
+  background-color:black;
+  text-align: center;
+  border: none;
+  border-radius: 8px;
+  margin: 1px 10px;
+  text-decoration: none;
+  color: white;
+  font-family: courier;
+  
 }
 
-input[type=password], select{
-	font-size:30px;
-	width:125px;
-	height: 60px;
-	padding: 12px 20px;
-	margin: 8px 0;
-	display: inline-block;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	box-sizing: border-box;
+h1 {
+  font-family: courier;
+  font-size: 25px;
+  
 }
 
 </style>
 </head>
 <body>
 <center>
-<br><br><br><br><br><br><br><br><br><br><br>
-<h3>Username</h3> &nbsp
+<h1> Hi. </h1>
+<h1> This is my homepage?? <br> <BR>i guess? <br> <BR> idk i've been spending way too much time on the POS project <br> which i hope you'll enjoy lol </h1>
+<h1> --anyways-- </h1>
 
-<input type="text" id="myText"> <br> <br>
-
-
-<h3>Password</h3> &nbsp &nbsp
-
-
-<input type="password" id="myText2"> <br> <br>
-
-<button onclick="myFunction()">Login</button>
-		
-<script>
-function myFunction() {
-  var x = document.getElementById("myText").value;
-  var y = document.getElementById("myText2").value;
-  window.open("page1.html", "_self");
-}
-
-</script>
-
+<a href="index.html"> &#10024;POS Simulation&#10024; </a>
 </body>
 </html>
+
+
