--- a/page1.html
+++ b/page1.html
@@ -76,7 +76,7 @@
 <button class="button">BULK COFFEE</button>
 <button class="button" style="border-color: #33CCFF">FROZEN BATTERS</button>
 <button class="button" style="border-color: black">MIXES</button>
-<button class="button" style="border-color: #6CFF52">PIZZA DOUGH</button>
+<button class="button" style="border-color: #4FB83D">PIZZA DOUGH</button>
 <button class="button" style="border-color: #E15DF0">SYRUP BOTTLES</button>
 </a>
 </div>
@@ -94,12 +94,13 @@
 
 <div class="split right">
   <div class="box">
-	<button class="button2">Select item to<br style="margin: 2px">update Quantity:</button>
+	<button class="button2" style="text-align: left; margin-left: 20px">Select item to<br style="margin: 2px">update Quantity:</button>
 	&nbsp&nbsp
 	<button class="button3">+</button>
 	<button class="button3">-</button>
   </div>
   <div class="title">
+  &nbsp
   Order 
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
@@ -107,8 +108,31 @@
   &nbsp&nbsp&nbsp&nbsp&nbsp
   Qty
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
-  &nbsp&nbsp
+  &nbsp
   Price($)
+  </div>
+  <div class="itemsummary">
+  </div>
+  <div class="box2" style="border: none;">
+  <button class="button4">
+  Tax: <br> Total:
+  </button>
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  <button class="button4" style="width: 280px;  text-align: right">
+  $0.00 <br> $0.00
+  </button>
+  <br style="margin: 10px;">
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  <button class="button5">
+  Order
+  </button>
+  </div>
   </div>
 </div>
 
