--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h1 {
 <h1> This is my homepage?? <br> <BR>i guess? <br> <BR> idk i've been spending way too much time on the POS project <br> which i hope you'll enjoy lol </h1>
 <h1> --anyways-- </h1>
 
-<a href="index.html"> &#10024;POS Simulation&#10024; </a>
+<a href="POS.html"> &#10024;POS Simulation&#10024; </a>
 </body>
 </html>
 
