added to bottom navbar

--- a/page1.html
+++ b/page1.html
@@ -88,6 +88,23 @@
 </a>
 </div>
 
+<div class="split left" id="merch">
+<a>
+not here yet merch
+</a>
+</div>
+
+<div class="split left" id="giftcards">
+<a>
+not here yet giftcards
+</a>
+</div>
+
+<div class="split left" id="wholesale">
+<a>
+not here yet wholesale
+</a>
+</div>
 
 <br><br><br><br><br>
 
@@ -136,14 +153,26 @@
   </div>
 </div>
 
-<div class="navbar">
+<div class="navbar" id="firstbottom">
+<b>
 <center>
   <a href=# id="bottombar1" onclick="purplebottom1()">FOOD</a>
   <a href=# id="bottombar2" onclick="purplebottom2()">HOT DRINKS</a>
   <a href=# id="bottombar3" onclick="purplebottom3()">COLD DRINKS</a>
   <a href=# id="bottombar4" onclick="purplebottom4()">GROCERY ITEMS</a>
   <a href=# id="bottombar5" onclick="purplebottom5()">FEES</a>
-  <a href=# class="gray">➩</a>
+  <a href=# class="gray" onclick="graybottom1()">🠺</a>
+</b>
+</div>
+
+<div class="navbar" id="secondbottom">
+<b>
+<center>
+  <a href=# class="gray" onclick="graybottom2()">🠸</a>
+  <a href=# id="bottombar6" onclick="purplebottom6()">MERCH</a>
+  <a href=# id="bottombar7" onclick="purplebottom7()">GIFT CARDS</a>
+  <a href=# id="bottombar8" onclick="purplebottom8()">WHOLE<br style="margin: 0px">SALE</a>
+</b>
 </div>
 <script src="myscripts.js"></script>
 </body>
