--- a/page1.html
+++ b/page1.html
@@ -161,14 +161,14 @@ not here yet wholesale
   <a href=# id="bottombar3" onclick="purplebottom3()">COLD DRINKS</a>
   <a href=# id="bottombar4" onclick="purplebottom4()">GROCERY ITEMS</a>
   <a href=# id="bottombar5" onclick="purplebottom5()">FEES</a>
-  <a href=# class="gray" onclick="graybottom1()">🠺</a>
+  <a href=# class="gray" onclick="graybottom1()"><img src="arrowright.png" style="width: 40px;"></a>
 </b>
 </div>
 
 <div class="navbar" id="secondbottom">
 <b>
 <center>
-  <a href=# class="gray" onclick="graybottom2()">🠸</a>
+  <a href=# class="gray" onclick="graybottom2()"><img src="arrowleft.png" style="width: 40px;"></a>
   <a href=# id="bottombar6" onclick="purplebottom6()">MERCH</a>
   <a href=# id="bottombar7" onclick="purplebottom7()">GIFT CARDS</a>
   <a href=# id="bottombar8" onclick="purplebottom8()">WHOLE<br style="margin: 0px">SALE</a>
