more bottom navs

--- a/page1.html
+++ b/page1.html
@@ -90,19 +90,43 @@
 
 <div class="split left" id="merch">
 <a>
-not here yet merch
+<button class="button" style="border-color: #4FB83D">Birthday Candles</button>
+<button class="button" style="border-color: #4FB83D">Cinnamon Bun Candle, 6oz</button>
+<button class="button" style="border-color: #4FB83D">Travel Mug, 16oz <br style="margin-top: 1px"> Grey on Black</button>
+<button class="button" style="border-color: #4FB83D">Cinnamon <br style="margin-top: 1px"> Bun <br style="margin-top: 1px"> Room <br style="margin-top: 1px"> Spray, 4oz</button>
+<button class="button" style="border-color: #4FB83D">Tote <br style="margin-top: 1px"> Bag</button> <br><br>
+
+<button class="button" style="border-color: #4FB83D">Travel Mug <br style="margin-top: 1px"> 16 oz <br style="margin-top: 1px"> Black on Black</button>
+<button class="button" style="border-color: #4FB83D">Water <br style="margin-top: 1px"> Bottle <br style="margin-top: 1px"> 17 oz</button>
+<button class="button" style="border-color: #4FB83D">Free <br style="margin-top: 1px"> Bev <br style="margin-top: 1px"> With Mug</button>
+<button class="button" style="border-color: #4FB83D">City Of Vancouver Bag <br style="margin-top: 1px"> Fee </button>
 </a>
 </div>
 
 <div class="split left" id="giftcards">
 <a>
-not here yet giftcards
+<button class="button">Gift Card Activate</button>
+<button class="button">Gift Card Reload</button>
 </a>
 </div>
 
 <div class="split left" id="wholesale">
 <a>
-not here yet wholesale
+<button class="button">Wholesale Cinnamon Bun <br style="margin-top: 1px"> (each)</button>
+<button class="button">Wholesale Frozen <br style="margin-top: 1px"> Buns <br style="margin-top: 1px"> (24)</button>
+<button class="button">Wholesale Frozen <br style="margin-top: 1px"> Buns <br style="margin-top: 1px"> (32)</button>
+<button class="button" style="border-color: #33CCFF">Wholesale Muffin <br style="margin-top: 1px"> Mix <br style="margin-top: 1px"> Espresso</button>
+<button class="button" style="border-color: #33CCFF">Wholesale Muffin <br style="margin-top: 1px"> Mix <br style="margin-top: 1px"> Flax</button> <br><br>
+
+<button class="button" style="border-color: #33CCFF">Wholesale Muffin <br style="margin-top: 1px"> Mix <br style="margin-top: 1px"> Fruit</button>
+<button class="button" style="border-color: #33CCFF">Wholesale Muffin <br style="margin-top: 1px"> Mix <br style="margin-top: 1px"> Oatmeal</button>
+<button class="button" style="border-color: #33CCFF">Wholesale Muffin <br style="margin-top: 1px"> Mix <br style="margin-top: 1px"> Vegan</button>
+<button class="button" style="border-color: #33CCFF">Wholesale Lemon <br style="margin-top: 1px"> Bomb Mix (GF)</button>
+<button class="button" style="border-color: #F0C65D">Wholesale <br style="margin-top: 1px"> Cookie <br style="margin-top: 1px"> Dough <br style="margin-top: 1px"> Choc Chip</button> <br><br>
+
+<button class="button" style="border-color: #F0C65D">Wholesale <br style="margin-top: 1px"> Cookie <br style="margin-top: 1px"> Dough Oatmeal <br style="margin-top: 1px"> Raisin </button>
+<button class="button" style="border-color: black">Wholesale <br style="margin-top: 1px"> Icing <br style="margin-top: 1px"> 16kg</button>
+<button class="button" style="border-color: black">Wholesale <br style="margin-top: 1px"> Icing <br style="margin-top: 1px"> 8lbs</button>
 </a>
 </div>
 
