--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
 <br>
 <div class="split left" id="food">
 <a>
-<button class="button">CINNAMON BUNS</button>
+<button class="button" onclick="cinnabuns()">CINNAMON BUNS</button>
 <button class="button">PASTRIES</button>
 <button style="border-color: #33CCFF" class="button">NO TAX PASTRIES</button>
 <button class="button">SAVOURY</button>
@@ -175,7 +175,6 @@
   </button>
   </div>
   </div>
-</div>
 
 <div class="navbar" id="firstbottom">
 <b>
@@ -187,7 +186,6 @@
   <a href=# id="bottombar5" onclick="purplebottom5()">FEES</a>
   <a href=# class="gray" onclick="graybottom1()"><img src="arrowright.png" style="width: 40px;"></a>
 </b>
-</div>
 
 <div class="navbar" id="secondbottom">
 <b>
@@ -197,6 +195,8 @@
   <a href=# id="bottombar7" onclick="purplebottom7()">GIFT CARDS</a>
   <a href=# id="bottombar8" onclick="purplebottom8()">WHOLE<br style="margin: 0px">SALE</a>
 </b>
+</div>
+
 </div>
 <script src="myscripts.js"></script>
 </body>
