--- a/page1.html
+++ b/page1.html
@@ -186,6 +186,7 @@
   <a href=# id="bottombar5" onclick="purplebottom5()">FEES</a>
   <a href=# class="gray" onclick="graybottom1()"><img src="arrowright.png" style="width: 40px;"></a>
 </b>
+</div>
 
 <div class="navbar" id="secondbottom">
 <b>
@@ -196,7 +197,6 @@
   <a href=# id="bottombar8" onclick="purplebottom8()">WHOLE<br style="margin: 0px">SALE</a>
 </b>
 </div>
-
 </div>
 <script src="myscripts.js"></script>
 </body>
